Fix css spacing within video items and the video list

--- a/wild-blue-yonder-website/src/components/VideoItem/video-item.css
+++ b/wild-blue-yonder-website/src/components/VideoItem/video-item.css
@@ -1,7 +1,7 @@
 .show-item-container {
   display: flex;
   flex-direction: column;
-  gap: 16px;
+  gap: 20px;
   align-items: center;
 }
 
