--- a/wild-blue-yonder-website/src/components/Videos/videos.css
+++ b/wild-blue-yonder-website/src/components/Videos/videos.css
@@ -3,6 +3,6 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  gap: 28px;
+  gap: 40px;
   padding: 12px;
 }
